--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "test",
     "start": "webpack-dev-server  --hot --inline",
+    "build": "./node_modules/webpack/bin/webpack.js",
     "scss-compile": "node-sass -rw assets/styles/ -o assets/styles"
   },
   "repository": {
