--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "css-loader": "^0.26.1",
+    "rxjs": "^5.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   }
